--- a/VoidDays/App.xaml
+++ b/VoidDays/App.xaml
@@ -2,8 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:VoidDays"
-             StartupUri="MainWindow.xaml">
+             xmlns:viewmodels="clr-namespace:VoidDays.ViewModels"
+             xmlns:views="clr-namespace:VoidDays.Views"
+             StartupUri="Views/MainContainer.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewmodels:CurrentDayViewModel}">
+            <views:CurrentDayView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:PreviousDayViewModel}">
+            <views:PreviousDayView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:CurrentListViewModel}">
+            <views:CurrentListView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:MainViewContainerViewModel}">
+            <views:MainViewContainer/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
