--- a/VoidDays/Views/CurrentListView.xaml
+++ b/VoidDays/Views/CurrentListView.xaml
@@ -6,7 +6,38 @@
              xmlns:local="clr-namespace:VoidDays.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Button Command="{Binding TestCommand}">Test</Button>
+    <Grid >
+        <Grid.RowDefinitions>
+
+            <RowDefinition Height="Auto"/>
+
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" HorizontalAlignment="Right">
+            <Button IsEnabled="{Binding IsToday}" Command="{Binding NewGoalCommand}">New Goal</Button>
+        </StackPanel>
+        <ListBox Padding="0" HorizontalContentAlignment="Stretch" ItemsSource="{Binding GoalItemViewModelAggregates,UpdateSourceTrigger=PropertyChanged,Mode=OneWay}" SelectedItem="{Binding SelectedGoalItemViewModel,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  Grid.Row="1">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+
+                    <Border BorderBrush="Black" BorderThickness="1">
+                        <Grid>
+                            <ContentControl Content="{Binding GoalItemViewModel}"/>
+                        </Grid>
+                    </Border>
+
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <Button Width="20" Command="{Binding BackCommand}" IsEnabled="{Binding IsBackEnabled}">&lt;</Button>
+            <Button Width="20" Command="{Binding ForwardCommand}" IsEnabled="{Binding IsForwardEnabled}">&gt;</Button>
+        </StackPanel>
+        <StackPanel IsEnabled="{Binding IsToday}" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Command="{Binding EditGoalItemCommand}">Edit</Button>
+            <Button Command="{Binding CompleteGoalItemCommand}">Complete</Button>
+        </StackPanel>
     </Grid>
 </UserControl>
