--- a/VoidDays/Views/CurrentListView.xaml
+++ b/VoidDays/Views/CurrentListView.xaml
@@ -6,38 +6,73 @@
              xmlns:local="clr-namespace:VoidDays.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid >
-        <Grid.RowDefinitions>
+    <Grid>
+        <Grid>
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLoading}" Value="True">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding IsLoading}" Value="False">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+            <ContentControl  Content="{Binding LoadingViewModel}"/>
+        </Grid>
+        
+        <Grid>
+        </Grid>
+        <Grid>
 
-            <RowDefinition Height="Auto"/>
+            <Grid.RowDefinitions>
 
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" HorizontalAlignment="Right">
-            <Button IsEnabled="{Binding IsToday}" Command="{Binding NewGoalCommand}">New Goal</Button>
-        </StackPanel>
-        <ListBox ItemContainerStyle="{DynamicResource RedGlowItemContainer}" Padding="0" HorizontalContentAlignment="Stretch" ItemsSource="{Binding GoalItemViewModelAggregates,UpdateSourceTrigger=PropertyChanged,Mode=OneWay}" SelectedItem="{Binding SelectedGoalItemViewModel,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  Grid.Row="1">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
+                <RowDefinition Height="Auto"/>
 
-                    <Border BorderBrush="Black" BorderThickness="1">
-                        <Grid>
-                            <ContentControl Content="{Binding GoalItemViewModel}"/>
-                        </Grid>
-                    </Border>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" HorizontalAlignment="Right">
+                <Button IsEnabled="{Binding IsToday}" Command="{Binding NewGoalCommand}">New Goal</Button>
+            </StackPanel>
+            <Grid Grid.Row="1">
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsLoading}" Value="True">
+                                <Setter Property="Visibility" Value="Collapsed"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsLoading}" Value="False">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
+                <ListBox ItemContainerStyle="{DynamicResource RedGlowItemContainer}" Padding="0" HorizontalContentAlignment="Stretch" ItemsSource="{Binding GoalItemViewModelAggregates,UpdateSourceTrigger=PropertyChanged,Mode=OneWay}" SelectedItem="{Binding SelectedGoalItemViewModel,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
 
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <StackPanel Grid.Row="2" Orientation="Horizontal">
-            <Button Width="20" Command="{Binding BackCommand}" IsEnabled="{Binding IsBackEnabled}">&lt;</Button>
-            <Button Width="20" Command="{Binding ForwardCommand}" IsEnabled="{Binding IsForwardEnabled}">&gt;</Button>
-        </StackPanel>
-        <StackPanel IsEnabled="{Binding IsToday}" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Command="{Binding EditGoalItemCommand}">Edit</Button>
-            <Button Command="{Binding CompleteGoalItemCommand}">Complete</Button>
-        </StackPanel>
+                            <Border BorderBrush="Black" BorderThickness="1">
+                                <Grid>
+                                    <ContentControl Content="{Binding GoalItemViewModel}"/>
+                                </Grid>
+                            </Border>
+
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+            <StackPanel Grid.Row="2" Orientation="Horizontal">
+                <Button Width="20" Command="{Binding BackCommand}" IsEnabled="{Binding IsBackEnabled}">&lt;</Button>
+                <Button Width="20" Command="{Binding ForwardCommand}" IsEnabled="{Binding IsForwardEnabled}">&gt;</Button>
+            </StackPanel>
+            <StackPanel IsEnabled="{Binding IsToday}" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Command="{Binding EditGoalItemCommand}">Edit</Button>
+                <Button Command="{Binding CompleteGoalItemCommand}">Complete</Button>
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
