--- a/VoidDays/Views/SmallHistoryDayViewContainer.xaml
+++ b/VoidDays/Views/SmallHistoryDayViewContainer.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" >
     <Grid HorizontalAlignment="Center">
-        <ItemsControl ItemsSource="{Binding SmallHistoryDayViewModels}" >
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ItemsControl ItemsSource="{Binding SmallHistoryDayViewModels}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal"/>
@@ -22,5 +23,6 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
+        </ScrollViewer>
     </Grid>
 </UserControl>
