--- a/VoidDays/Views/MainContainer.xaml
+++ b/VoidDays/Views/MainContainer.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="VoidDays.Views.MainContainer"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VoidDays.Views"
-        mc:Ignorable="d"
-        Title="MainContainer" Height="600" Width="700">
+﻿<UserControl x:Class="VoidDays.Views.MainContainer"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:VoidDays.Views"
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid>
             <Grid.Style>
@@ -20,7 +20,7 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
-            <ContentControl  Content="{Binding LoadingViewModel}"/>
+            <ContentControl Content="{Binding LoadingViewModel}"/>
         </Grid>
         <Grid>
             <Grid.Style>
@@ -53,4 +53,4 @@
         </StackPanel>
 </Grid>
     </Grid>
-</Window>
+</UserControl>
