--- a/VoidDays/Views/LoginView.xaml
+++ b/VoidDays/Views/LoginView.xaml
@@ -20,9 +20,9 @@
         </Grid.ColumnDefinitions>
         <TextBlock Text="{Binding LoginMessage,UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="3"/>
         <Label Grid.Row="1">Username:</Label>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Username}"></TextBox>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Username,UpdateSourceTrigger=PropertyChanged}"></TextBox>
         <Label Grid.Row="2">Password:</Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Password}"></TextBox>
-        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoginCommand}">Login</Button>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Password,UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoginCommand}" IsDefault="True">Login</Button>
     </Grid>
 </UserControl>
