--- a/VoidDays/Views/StartupContainerView.xaml
+++ b/VoidDays/Views/StartupContainerView.xaml
@@ -7,6 +7,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ContentControl Content="{Binding CurrentView}"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TabControl ItemsSource="{Binding TabItems}" SelectedItem="{Binding SelectedTabItem, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" SelectedIndex="{Binding SelectedIndex, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay, FallbackValue=0}" Grid.Row="0">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0,4,0,0"
+                                       VerticalAlignment="Center"
+                                       FontWeight="Bold"
+                                       Text="{Binding TabHeader}" />
+                    </StackPanel>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+        </TabControl>
+        
     </Grid>
 </UserControl>
