working on auto update day history bug

--- a/VoidDays/Views/SmallHistoryDayView.xaml
+++ b/VoidDays/Views/SmallHistoryDayView.xaml
@@ -40,6 +40,9 @@
                         <DataTrigger Binding="{Binding Day.IsActive}" Value="True">
                             <Setter Property="Background" Value="Yellow"></Setter>
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding Day.IsActive}" Value="False">
+                            <Setter Property="Background" Value="Red"></Setter>
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
