--- a/VoidDays/MainWindow.xaml
+++ b/VoidDays/MainWindow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VoidDays"
         mc:Ignorable="d"
-        Height="350" Width="525">
+        Height="350" Width="525"
+        Mouse.MouseMove="Window_MouseMove"
+        Keyboard.KeyDown="Window_KeyDown"
+        >
     <Grid>
         <Grid>
             <Grid.Style>
