--- a/VoidDays/Views/LoginView.xaml
+++ b/VoidDays/Views/LoginView.xaml
@@ -2,11 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"     
+             xmlns:Behaviors="clr-namespace:VoidDays.Views.Behaviors"        
              xmlns:local="clr-namespace:VoidDays.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+             d:DesignHeight="450" d:DesignWidth="800"
+
+             Loaded="UserControl_Loaded"
+             
+             >
+    
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Center" FocusManager.IsFocusScope="True">
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -20,9 +27,10 @@
         </Grid.ColumnDefinitions>
         <TextBlock Text="{Binding LoginMessage,UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="3"/>
         <Label Grid.Row="1">Username:</Label>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Username,UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Username,UpdateSourceTrigger=PropertyChanged}" x:Name="Username" Focusable="True">
+        </TextBox>
         <Label Grid.Row="2">Password:</Label>
         <PasswordBox Name="txtPassword" Grid.Row="2" Grid.Column="1"></PasswordBox>
-        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=txtPassword}" IsDefault="True">Login</Button>
+        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=txtPassword}" IsDefault="True" >Login</Button>
     </Grid>
 </UserControl>
