--- a/Mobile/Mobile/App.xaml
+++ b/Mobile/Mobile/App.xaml
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vms="clr-namespace:Mobile.ViewModels"
+             xmlns:views="clr-namespace:Mobile.Views"
              x:Class="Mobile.App">
 
     <Application.Resources>
+        
         <ResourceDictionary>
             <!--Global Styles-->
             <Color x:Key="NavigationPrimary">#2196F3</Color>
