--- a/Mobile/Mobile/App.xaml
+++ b/Mobile/Mobile/App.xaml
@@ -8,6 +8,9 @@
     <Application.Resources>
         
         <ResourceDictionary>
+            <DataTemplate x:Key="About" x:DataType="{x:Type vms:SmallHistoryDayViewModel}">
+                <views:AboutPage/>
+            </DataTemplate>
             <!--Global Styles-->
             <Color x:Key="NavigationPrimary">#2196F3</Color>
             <Style TargetType="NavigationPage">
